--- a/index.html
+++ b/index.html
@@ -5,20 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - Dilyana Nikolaeva changes! - Ей тука промянай! :) </title>
+    <title>Hello World - Dilyana Nikolaeva changes!</title>
 </head>
 
 <body>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus, adipisci dolorum beatae tempora,
-            doloribus suscipit reprehenderit molestiae, nostrum aperiam sed est repellat nihil architecto unde amet
-            autem. Commodi, ullam?</p>
-    </div>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus, adipisci dolorum beatae tempora,
-            doloribus suscipit reprehenderit molestiae, nostrum aperiam sed est repellat nihil architecto unde amet
-            autem. Commodi, ullam?</p>
-    </div>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus, adipisci dolorum beatae tempora,
             doloribus suscipit reprehenderit molestiae, nostrum aperiam sed est repellat nihil architecto unde amet
